chore: fix doc issues in Bridge GW quick setup and allow to use another registry

--- a/docker/quick-setup/gateway-http-bridge-repository-postgresql-heartbeat/docker-compose.yml
+++ b/docker/quick-setup/gateway-http-bridge-repository-postgresql-heartbeat/docker-compose.yml
@@ -75,7 +75,7 @@ services:
       - storage
 
   gateway_server:
-    image: graviteeio/apim-gateway:${APIM_VERSION:-latest}
+    image: ${APIM_REGISTRY:-graviteeio}/apim-gateway:${APIM_VERSION:-latest}
     restart: always
     ports:
       - "18092:18092"
@@ -108,7 +108,7 @@ services:
       - frontend
 
   gateway_client:
-    image: graviteeio/apim-gateway:${APIM_VERSION:-latest}
+    image: ${APIM_REGISTRY:-graviteeio}/apim-gateway:${APIM_VERSION:-latest}
     restart: always
     ports:
       - "8075-8082:8082"
@@ -142,7 +142,7 @@ services:
       - frontend
 
   management_api:
-    image: graviteeio/apim-management-api:${APIM_VERSION:-latest}
+    image: ${APIM_REGISTRY:-graviteeio}/apim-management-api:${APIM_VERSION:-latest}
     restart: always
     ports:
       - "8083:8083"
@@ -166,7 +166,7 @@ services:
       - frontend
 
   management_ui:
-    image: graviteeio/apim-management-ui:${APIM_VERSION:-latest}
+    image: ${APIM_REGISTRY:-graviteeio}/apim-management-ui:${APIM_VERSION:-latest}
     restart: always
     ports:
       - "8084:8080"
@@ -180,7 +180,7 @@ services:
       - frontend
 
   portal_ui:
-    image: graviteeio/apim-portal-ui:${APIM_VERSION:-latest}
+    image: ${APIM_REGISTRY:-graviteeio}/apim-portal-ui:${APIM_VERSION:-latest}
     restart: always
     ports:
       - "8085:8080"
