--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -48,7 +48,7 @@
         <!-- Management API & Gateway -->
         <gravitee-alert-engine-connectors-ws.version>1.0.0</gravitee-alert-engine-connectors-ws.version>
         <gravitee-connector-http.version>2.0.7</gravitee-connector-http.version>
-        <gravitee-policy-apikey.version>2.9.0</gravitee-policy-apikey.version>
+        <gravitee-policy-apikey.version>3.0.0-alpha.1</gravitee-policy-apikey.version>
         <gravitee-policy-assign-attributes.version>1.5.0</gravitee-policy-assign-attributes.version>
         <gravitee-policy-assign-content.version>1.7.0</gravitee-policy-assign-content.version>
         <gravitee-policy-cache.version>1.15.1</gravitee-policy-cache.version>
@@ -65,18 +65,18 @@
         <gravitee-policy-json-validation.version>1.6.1</gravitee-policy-json-validation.version>
         <gravitee-policy-json-xml.version>1.2.1</gravitee-policy-json-xml.version>
         <gravitee-policy-jws.version>1.3.2</gravitee-policy-jws.version>
-        <gravitee-policy-jwt.version>2.4.0</gravitee-policy-jwt.version>
-        <gravitee-policy-keyless.version>1.8.1</gravitee-policy-keyless.version>
+        <gravitee-policy-jwt.version>3.0.0-alpha.1</gravitee-policy-jwt.version>
+        <gravitee-policy-keyless.version>2.0.0-alpha.1</gravitee-policy-keyless.version>
         <gravitee-policy-latency.version>1.4.0</gravitee-policy-latency.version>
         <gravitee-policy-metrics-reporter.version>2.0.0</gravitee-policy-metrics-reporter.version>
         <gravitee-policy-mock.version>1.13.0</gravitee-policy-mock.version>
-	    <gravitee-policy-oauth2.version>1.23.0</gravitee-policy-oauth2.version>
+	    <gravitee-policy-oauth2.version>2.0.0-alpha.1</gravitee-policy-oauth2.version>
         <gravitee-policy-openid-connect-userinfo.version>1.5.2</gravitee-policy-openid-connect-userinfo.version>
         <gravitee-policy-override-http-method.version>1.3.0</gravitee-policy-override-http-method.version>
         <!--    Version of policy-ratelimit is also used for policy-quota, policy-spikearrest and gateway-services-ratelimit    -->
         <!--    <gravitee-policy-quota.version>1.15.0</gravitee-policy-quota.version>    -->
         <!--    <gravitee-policy-spikearrest.version>1.15.0</gravitee-policy-spikearrest.version>    -->
-        <gravitee-policy-ratelimit.version>1.15.0</gravitee-policy-ratelimit.version>
+        <gravitee-policy-ratelimit.version>2.0.0-alpha.1</gravitee-policy-ratelimit.version>
         <gravitee-policy-regex-threat-protection.version>1.3.2</gravitee-policy-regex-threat-protection.version>
         <gravitee-policy-request-content-limit.version>1.8.0</gravitee-policy-request-content-limit.version>
         <gravitee-policy-request-validation.version>1.13.0</gravitee-policy-request-validation.version>
@@ -98,7 +98,7 @@
         <gravitee-resource-oauth2-provider-generic.version>2.0.0</gravitee-resource-oauth2-provider-generic.version>
         <gravitee-service-discovery-consul.version>1.3.0</gravitee-service-discovery-consul.version>
         <!-- Management API Only -->
-        <gravitee-cockpit-connectors-ws.version>2.4.9</gravitee-cockpit-connectors-ws.version>
+        <gravitee-cockpit-connectors-ws.version>3.0.0-alpha.1</gravitee-cockpit-connectors-ws.version>
         <gravitee-fetcher-bitbucket.version>1.7.0</gravitee-fetcher-bitbucket.version>
         <gravitee-fetcher-git.version>1.7.0</gravitee-fetcher-git.version>
         <gravitee-fetcher-github.version>1.6.0</gravitee-fetcher-github.version>
@@ -733,8 +733,8 @@
                 <!-- Enterprise plugins -->
                 <gravitee-policy-assign-metrics.version>2.0.1</gravitee-policy-assign-metrics.version>
                 <gravitee-policy-data-logging-masking.version>2.0.1</gravitee-policy-data-logging-masking.version>
-                <gravitee-entrypoint-sse-advanced.version>2.0.0-alpha.1</gravitee-entrypoint-sse-advanced.version>
-                <gravitee-endpoint-kafka-advanced.version>1.0.0-alpha.1</gravitee-endpoint-kafka-advanced.version>
+                <gravitee-entrypoint-sse-advanced.version>2.0.0-alpha.2</gravitee-entrypoint-sse-advanced.version>
+                <gravitee-endpoint-kafka-advanced.version>1.0.0-alpha.2</gravitee-endpoint-kafka-advanced.version>
 
                 <!-- Management API Only -->
                 <!-- Gateway Only -->
