--- a/gravitee-apim-e2e/docker/api-tests/docker-compose-api-tests.yml
+++ b/gravitee-apim-e2e/docker/api-tests/docker-compose-api-tests.yml
@@ -29,6 +29,7 @@ services:
       - GATEWAY_BASE_URL=http://gateway:8082
       - WIREMOCK_BASE_URL=http://wiremock:8080
       - JUPITER_MODE_ENABLED=${JUPITER_MODE_ENABLED:-false}
+      - WIREMOCK_BASE_URL_FOR_JEST=http://wiremock:8080
     depends_on:
       management_api:
         condition: service_healthy
