--- a/gravitee-apim-console-webui/package.json
+++ b/gravitee-apim-console-webui/package.json
@@ -15,10 +15,10 @@
     "@angular/upgrade": "12.2.3",
     "@asyncapi/web-component": "1.0.0-next.15",
     "@fontsource/libre-franklin": "4.4.5",
-    "@gravitee/ui-analytics": "^4.5.2",
+    "@gravitee/ui-analytics": "4.5.3",
     "@gravitee/ui-components": "3.36.2",
-    "@gravitee/ui-particles-angular": "^4.5.2",
-    "@gravitee/ui-policy-studio-angular": "^4.5.2",
+    "@gravitee/ui-particles-angular": "4.5.3",
+    "@gravitee/ui-policy-studio-angular": "4.5.3",
     "@highcharts/map-collection": "1.1.4",
     "@toast-ui/editor": "2.5.4",
     "@toast-ui/editor-plugin-code-syntax-highlight": "1.0.0",
