--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -741,7 +741,7 @@
                 <gravitee-policy-assign-metrics.version>2.0.1</gravitee-policy-assign-metrics.version>
                 <gravitee-policy-data-logging-masking.version>2.0.1</gravitee-policy-data-logging-masking.version>
                 <gravitee-entrypoint-sse-advanced.version>2.0.0-alpha.3</gravitee-entrypoint-sse-advanced.version>
-                <gravitee-endpoint-kafka-advanced.version>1.0.0-alpha.4</gravitee-endpoint-kafka-advanced.version>
+                <gravitee-endpoint-kafka-advanced.version>1.0.0-alpha.5</gravitee-endpoint-kafka-advanced.version>
                 <gravitee-endpoint-mqtt5-advanced.version>1.0.0-alpha.1</gravitee-endpoint-mqtt5-advanced.version>
 
                 <!-- Management API Only -->
@@ -772,14 +772,13 @@
                     <type>zip</type>
                     <scope>runtime</scope>
                 </dependency>
-                <!-- TODO Uncomment when mqtt5 alpha is released -->
-                <!--                <dependency>-->
-                <!--                    <groupId>com.graviteesource.endpoint</groupId>-->
-                <!--                    <artifactId>gravitee-endpoint-mqtt5-advanced</artifactId>-->
-                <!--                    <version>${gravitee-endpoint-mqtt5-advanced.version}</version>-->
-                <!--                    <type>zip</type>-->
-                <!--                    <scope>runtime</scope>-->
-                <!--                </dependency>-->
+                <dependency>
+                    <groupId>com.graviteesource.endpoint</groupId>
+                    <artifactId>gravitee-endpoint-mqtt5-advanced</artifactId>
+                    <version>${gravitee-endpoint-mqtt5-advanced.version}</version>
+                    <type>zip</type>
+                    <scope>runtime</scope>
+                </dependency>
                 <!-- Policies -->
                 <dependency>
                     <groupId>com.graviteesource.policy</groupId>
