--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -69,6 +69,7 @@
         <gravitee-policy-keyless.version>2.0.0-alpha.1</gravitee-policy-keyless.version>
         <gravitee-policy-latency.version>1.4.0</gravitee-policy-latency.version>
         <gravitee-policy-metrics-reporter.version>2.0.0</gravitee-policy-metrics-reporter.version>
+        <gravitee-policy-message-filtering.version>1.0.0-alpha.1</gravitee-policy-message-filtering.version>
         <gravitee-policy-mock.version>1.13.0</gravitee-policy-mock.version>
 	    <gravitee-policy-oauth2.version>2.0.0-alpha.1</gravitee-policy-oauth2.version>
         <gravitee-policy-openid-connect-userinfo.version>1.5.2</gravitee-policy-openid-connect-userinfo.version>
@@ -417,6 +418,13 @@
             <groupId>io.gravitee.policy</groupId>
             <artifactId>gravitee-policy-metrics-reporter</artifactId>
             <version>${gravitee-policy-metrics-reporter.version}</version>
+            <type>zip</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.gravitee.policy</groupId>
+            <artifactId>gravitee-policy-message-filtering</artifactId>
+            <version>${gravitee-policy-message-filtering.version}</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
