--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <!-- Version properties -->
         <revision>3.20.0</revision>
         <sha1/>
-        <changelist>-SNAPSHOT</changelist>
+        <changelist>-apim-199-mqtt-qos-SNAPSHOT</changelist>
 
         <!-- Vert.X version is mandatory for vertx-grpc-protoc-plugin in gravitee-apim-gateway-standalone-container -->
         <vertx.version>4.2.7</vertx.version>
@@ -60,7 +60,7 @@
         <gravitee-connector-api.version>1.1.4</gravitee-connector-api.version>
         <gravitee-expression-language.version>2.0.0-alpha.2</gravitee-expression-language.version>
         <gravitee-fetcher-api.version>1.4.0</gravitee-fetcher-api.version>
-        <gravitee-gateway-api.version>2.0.0-alpha.7</gravitee-gateway-api.version>
+        <gravitee-gateway-api.version>2.0.0-alpha.8</gravitee-gateway-api.version>
         <gravitee-license-node.version>1.3.1</gravitee-license-node.version>
         <gravitee-node.version>2.0.0-alpha.3</gravitee-node.version>
         <gravitee-notifier-api.version>1.4.1</gravitee-notifier-api.version>
