--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <!-- Version properties -->
         <revision>3.20.0</revision>
         <sha1/>
-        <changelist>-apim-199-mqtt-qos-SNAPSHOT</changelist>
+        <changelist>-SNAPSHOT</changelist>
 
         <!-- Vert.X version is mandatory for vertx-grpc-protoc-plugin in gravitee-apim-gateway-standalone-container -->
         <vertx.version>4.2.7</vertx.version>
